@@ -1,3 +1,8 @@
+1/30/2006 Bob Rossi <bob@brasko.net>
+  
+	* src/cgdb.c (create_and_init_pair): New function.
+   (main): Call new function.
+
 1/24/2006 Bob Rossi <bob@brasko.net>
   
 	* src/cgdb.c (process_commands): Fix memory leak.
